sagemaker imdb deployment- 2

--- a/imdb_sentiment_classification.ipynb
+++ b/imdb_sentiment_classification.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "remarkable-scheme",
+   "id": "fleet-physiology",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "periodic-polymer",
+   "id": "enhanced-penalty",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "metallic-toddler",
+   "id": "introductory-effort",
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "competent-massachusetts",
+   "id": "blond-mouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "proud-mounting",
+   "id": "humanitarian-enough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,8 +224,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "organizational-broadcasting",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "      <th>clean_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I grew up (b. 1965) watching and loving the Th...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>i grow up b    watch and love   thunderbird al...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                text  label  \\\n",
+       "0  I grew up (b. 1965) watching and loving the Th...      0   \n",
+       "\n",
+       "                                          clean_text  \n",
+       "0  i grow up b    watch and love   thunderbird al...  "
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
-   "id": "peripheral-scheduling",
+   "id": "latin-structure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "lined-raleigh",
+   "id": "generic-albert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "special-aquarium",
+   "id": "boxed-solid",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "gothic-slovakia",
+   "id": "reflected-guyana",
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "stylish-hampshire",
+   "id": "incoming-release",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "elementary-techno",
+   "id": "critical-commissioner",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "afraid-dating",
+   "id": "scheduled-preview",
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "congressional-mississippi",
+   "id": "extra-criterion",
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "appreciated-virginia",
+   "id": "serial-patrick",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "hispanic-ceiling",
+   "id": "ranking-seminar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "caring-consensus",
+   "id": "prime-trash",
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comprehensive-ranking",
+   "id": "referenced-shopping",
    "metadata": {},
    "outputs": [],
    "source": []
